Adjusted the assumptions to ignore cleaning time

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11,20 +11,15 @@
     "Assumptions:\n",
     "1. Durations of surgeries are deterministic\n",
     "2. Surgeon has max surgery time for the day\n",
-    "3. Assume there needs to be cleaning time between surgeries.\n",
-    "    - Infections and noninfections\n",
-    "    - Need to clean when going from Infection to noninfections or Infections to different type of infection\n",
-    "    - Don't need to clean when going from Same Infection to Same infection or noninfection to noninfection\n",
-    "4. Surgeries assigned to surgeon \n",
-    "5. Recovery rooms are not bottleneck\n",
-    "6. 8 hours max in OR, no overtime\n",
-    "7. Operating rooms are identical in time and equipment\n",
+    "3. Surgeries assigned to surgeon \n",
+    "4. Recovery rooms are not bottleneck\n",
+    "5. 8 hours max in OR, no overtime\n",
+    "6. Operating rooms are identical in time and equipment\n",
     "\n",
     "Maximize:\n",
     "1. Mandatory surgeries scheduled\n",
     "2. Surgeons don't exceed max daily surgery time\n",
-    "3. OR can only handle one patient at a time\n",
-    "4. Cleaning is required as mentioned above"
+    "3. OR can only handle one patient at a time"
    ]
   },
   {
